deployment/newCloudformation.yaml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: Stack for sat-api-pg.
Parameters:
  DBName:
    Default: MyDatabase
    Description: The database name
    Type: String
    MinLength: '1'
    MaxLength: '64'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: must begin with a letter and contain only
      alphanumeric characters.
  DBUser:
    NoEcho: 'true'
    Description: The database authenticator user
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: must begin with a letter and contain only
      alphanumeric characters.
  DBPassword:
    NoEcho: 'true'
    Description: The database authenticator password
    Type: String
    MinLength: '8'
    MaxLength: '41'
    AllowedPattern: '[a-zA-Z0-9]*'
    ConstraintDescription: must contain only alphanumeric characters.
  DBSuperUser:
    NoEcho: 'true'
    Description: The database admin account username
    Type: String
    MinLength: '1'
    MaxLength: '16'
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: must begin with a letter and contain only
      alphanumeric characters.
  DBSuperPassword:
    NoEcho: 'true'
    Description: The database admin account password
    Type: String
    MinLength: '8'
    MaxLength: '41'
    AllowedPattern: '[a-zA-Z0-9]*'
    ConstraintDescription: must contain only alphanumeric characters.
  DBAnonRole:
    Type: String
    Default: 'anonymous'
  DBSchema:
    Type: String
    Default: "api"
  DBPool:
    Type: String
    Default: "10"
  JwtSecret:
    NoEcho: 'true'
    Description: The JWT secret for PostgREST auth.
    Type: String
  MaxRows:
    Type: String
    Default: ""
    Description: "MAX_ROWS env var"
  PreRequest:
    Type: String
    Default: ""
    Description: "PRE_REQUEST env var"
  ListenerHostNamePattern:
    Type: String
    Description: Listen for requests on the load balancer for this domain
    Default: "*"
  OpenRestyImage:
    Type: String
    # Default: 'openresty:latest'
    Description: This image exists in your account's ECR repository.
  Version:
    Type: String
    Default: "latest"
  PostgrestImage:
    Type: String
    Default: 'subzerocloud/postgrest'
    Description: This image is not prepended with the ECR host because
      it is a standard PostgREST image.
  PostgrestContainerCpu:
    Type: Number
    Default: 256
    Description: How much CPU to give the container. 1024 is 1 CPU
  PostgrestContainerMemory:
    Type: Number
    Default: 512
    Description: How much memory in megabytes to give the container
  Priority:
    Type: Number
    Default: 1
    Description: The priority for the routing rule added to the load balancer.
                 This only applies if your have multiple services which are
                 assigned to different paths on the load balancer.
  DesiredCapacity:
    Type: Number
    Default: '0'
    Description: Number of EC2 instances to launch in your ECS cluster.
  MaxSize:
    Type: Number
    Default: '4'
    Description: Maximum number of EC2 instances that can be launched.
  ECSAMI:
    Description: AMI ID
    Type: AWS::EC2::Image::Id
    Default: ami-0bc08634af113cccb
  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.medium
    ConstraintDescription: Please choose a valid instance type.
Outputs:
  PGConnection:
    Value: !Join ['', ['postgres://', 'masteruser', ':',
                       !Ref 'DBPassword', '@',
                       !GetAtt [DB, Endpoint.Address],
                       ':', !GetAtt [DB, Endpoint.Port], /,
                       !Ref 'DBName']]
    Export:
      Name: !Sub '${AWS::StackName}-PGConnection'
Mappings:
  # Hard values for the subnet masks. These masks define
  # the range of internal IP addresses that can be assigned.
  # The VPC can have all IP's from 10.0.0.0 to 10.0.255.255
  # There are two subnets which cover the ranges:
  #
  # 10.0.0.0 - 10.0.0.255
  # 10.0.1.0 - 10.0.1.255
  #
  # If you need more IP addresses (perhaps you have so many
  # instances that you run out) then you can customize these
  # ranges to add more
  SubnetConfig:
    VPC:
      CIDR: '10.0.0.0/16'
    PublicOne:
      CIDR: '10.0.0.0/24'
    PublicTwo:
      CIDR: '10.0.1.0/24'
Resources:
  # VPC in which containers will be networked.
  # It has two public subnets
  # We distribute the subnets across the first two available subnets
  # for the region, for high availability.
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      EnableDnsSupport: true
      EnableDnsHostnames: true
      CidrBlock: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
  # Two public subnets, where containers can have public IP addresses
  PublicSubnetOne:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']
      MapPublicIpOnLaunch: true
  PublicSubnetTwo:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: {Ref: 'AWS::Region'}
      VpcId: !Ref 'VPC'
      CidrBlock: !FindInMap ['SubnetConfig', 'PublicTwo', 'CIDR']
      MapPublicIpOnLaunch: true
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: 'rds-subnet'
      SubnetIds:
        - !Ref 'PublicSubnetOne'
        - !Ref 'PublicSubnetTwo'
  # Setup networking resources for the public subnets. Containers
  # in the public subnets have public IP addresses and the routing table
  # sends network traffic via the internet gateway.
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  GatewayAttachement:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref 'VPC'
      InternetGatewayId: !Ref 'InternetGateway'
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref 'VPC'
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayAttachement
    Properties:
      RouteTableId: !Ref 'PublicRouteTable'
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref 'InternetGateway'
  PublicSubnetOneRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetOne
      RouteTableId: !Ref PublicRouteTable
  PublicSubnetTwoRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetTwo
      RouteTableId: !Ref PublicRouteTable
  # Allows access from ECS to RDS
  # RDS Resources
  DB:
    Type: AWS::RDS::DBInstance
    DependsOn: GatewayAttachement
    Properties:
      DBName: !Sub '${DBName}'
      DBSubnetGroupName: !Ref 'DBSubnetGroup'
      MasterUsername: !Ref 'DBSuperUser'
      MasterUserPassword: !Ref 'DBSuperPassword'
      AllocatedStorage: '5'
      DBInstanceClass: db.t2.small
      Engine: Postgres
      EngineVersion: '11'
      PubliclyAccessible: true
      VPCSecurityGroups:
        - !Ref ECSSecurityGroup

  # ECS Resources
  ECSCluster:
    Type: AWS::ECS::Cluster
  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the containers
      VpcId: !Ref 'VPC'
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow ELB access from internet"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
  LoadBalancerSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref ECSSecurityGroup
      IpProtocol: "tcp"
      FromPort: "32768"
      ToPort: "65535"
      SourceSecurityGroupId: !GetAtt LoadBalancerSecurityGroup.GroupId
  ExternalLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: "internet-facing"
      Subnets:
        - !Ref PublicSubnetOne
        - !Ref PublicSubnetTwo
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: "50"
      SecurityGroups:
        - !GetAtt LoadBalancerSecurityGroup.GroupId
  PlaceholderTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 30
      HealthCheckPath: "/rest/"
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 4
      Matcher:
        HttpCode: '200'
      Port: 80
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '30'
      UnhealthyThresholdCount: 3
      VpcId: !Ref VPC
  ExternalListenerHttp:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      Protocol: HTTP
      Port: 80
      LoadBalancerArn: !Ref ExternalLoadBalancer
      DefaultActions:
        - TargetGroupArn: !Ref PlaceholderTargetGroup
          Type: forward
  ServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ecs.amazonaws.com"
            Action:
              - "sts:AssumeRole"
      Path: "/"
      Policies:
        - PolicyName: "EcsRole"
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: "Allow"
                Action:
                  - "elasticloadbalancing:DeregisterInstancesFromLoadBalancer"
                  - "elasticloadbalancing:DeregisterTargets"
                  - "elasticloadbalancing:Describe*"
                  - "elasticloadbalancing:RegisterInstancesWithLoadBalancer"
                  - "elasticloadbalancing:RegisterTargets"

                  # Allow the ECS tasks to upload logs to CloudWatch
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                Resource: "*"
  PgRestLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Join ['', ['/ecs/', !Ref 'AWS::StackName', '/postgrest']]
  OpenRestyLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Join ['', ['/ecs/', !Ref 'AWS::StackName', '/openresty']]

  # Autoscaling group. This launches the actual EC2 instances that will register
  # themselves as members of the cluster, and run the docker containers.
  ECSAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - !Ref PublicSubnetOne
        - !Ref PublicSubnetTwo
      LaunchConfigurationName: !Ref 'ContainerInstances'
      MinSize: '0'
      MaxSize: !Ref 'MaxSize'
      DesiredCapacity: !Ref 'DesiredCapacity'
    CreationPolicy:
      ResourceSignal:
        Timeout: PT15M
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: true
  ContainerInstances:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: !Ref 'ECSAMI'
      SecurityGroups: [!Ref 'ECSSecurityGroup']
      InstanceType: !Ref 'InstanceType'
      IamInstanceProfile: !Ref 'EC2InstanceProfile'
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
          yum install -y aws-cfn-bootstrap
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} \
          --resource ECSAutoScalingGroup --region ${AWS::Region}
  AutoscalingRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [application-autoscaling.amazonaws.com]
            Action: ['sts:AssumeRole']
      Path: /
      Policies:
        - PolicyName: service-autoscaling
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  - 'application-autoscaling:*'
                  - 'cloudwatch:DescribeAlarms'
                  - 'cloudwatch:PutMetricAlarm'
                  - 'ecs:DescribeServices'
                  - 'ecs:UpdateService'
                Resource: '*'
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles: [!Ref 'EC2Role']

  # Role for the EC2 hosts. This allows the ECS agent on the EC2 hosts
  # to communciate with the ECS control plane, as well as download the docker
  # images from ECR to run on your host.
  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ['sts:AssumeRole']
      Path: /
      Policies:
        - PolicyName: ecs-service
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  - 'ecs:CreateCluster'
                  - 'ecs:DeregisterContainerInstance'
                  - 'ecs:DiscoverPollEndpoint'
                  - 'ecs:Poll'
                  - 'ecs:RegisterContainerInstance'
                  - 'ecs:StartTelemetrySession'
                  - 'ecs:Submit*'
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                  - 'ecr:GetAuthorizationToken'
                  - 'ecr:BatchGetImage'
                  - 'ecr:GetDownloadUrlForLayer'
                Resource: '*'

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Name: 'postgrest'
          Image: !Ref 'PostgrestImage'
          Cpu: !Ref 'PostgrestContainerCpu'
          Memory: !Ref 'PostgrestContainerMemory'
          Environment:
            # version used only to trigger image update and oncatiner restart
            - Name: VERSION
              Value: !Ref Version
            - Name: PGRST_DB_URI
              Value: !Join
                - ""
                -
                  - "postgres://"
                  - !Ref DBUser
                  - ":"
                  - !Ref DBPassword
                  - "@"
                  - !GetAtt [DB, Endpoint.Address]
                  - ":"
                  - !GetAtt [DB, Endpoint.Port]
                  - "/"
                  - !Ref DBName
            - Name: PGRST_DB_SCHEMA
              Value: !Ref DBSchema
            - Name: PGRST_DB_ANON_ROLE
              Value: !Ref DBAnonRole
            - Name: PGRST_DB_POOL
              Value: !Ref DBPool
            - Name: PGRST_JWT_SECRET
              Value: !Ref JwtSecret
            - Name: PGRST_MAX_ROWS
              Value: !Ref MaxRows
            - Name: PGRST_PRE_REQUEST
              Value: !Ref PreRequest
          LogConfiguration:
            LogDriver: "awslogs"
            Options:
              awslogs-group: !Ref PgRestLogGroup
              awslogs-region: !Ref AWS::Region
        - Name: "openresty"
          Cpu: !Ref 'PostgrestContainerCpu'
          Memory: !Ref 'PostgrestContainerMemory'
          Image: !Join
            - ""
            -
              - !Ref OpenRestyImage
              - ":"
              - !Ref Version
          PortMappings:
            - HostPort: "0"
              ContainerPort: "80"
              Protocol: "tcp"
          Links:
            - "postgrest:postgrest"
          Environment:
            - Name: DB_HOST
              Value: !GetAtt [DB, Endpoint.Address]
            - Name: DB_PORT
              Value: !GetAtt [DB, Endpoint.Port]
            - Name: DB_NAME
              Value: !Ref DBName
            - Name: DB_SCHEMA
              Value: !Ref DBSchema
            - Name: DB_USER
              Value: !Ref DBUser
            - Name: DB_PASS
              Value: !Ref DBPassword
            - Name: POSTGREST_HOST
              Value: "postgrest"
            - Name: POSTGREST_PORT
              Value: "3000"
            - Name: JWT_SECRET
              Value: !Ref JwtSecret
            - Name: DEVELOPMENT
              Value: "0"
          LogConfiguration:
            LogDriver: "awslogs"
            Options:
              awslogs-group: !Ref OpenRestyLogGroup
              awslogs-region: !Ref AWS::Region
